...
    icon: CollectIcons.homeOutline,
    selectedIcon: CollectIcons.home,
    path: '/home',
    branchIndex: 0,
  ),
  _CollectNavDestination(
    label: 'Groups',
    icon: CollectIcons.people,
    selectedIcon: CollectIcons.people,
    path: '/groups',
    branchIndex: 1,
  ),
  _CollectNavDestination(
    label: 'Activity',
    icon: CollectIcons.activity,
    selectedIcon: CollectIcons.activity,
    path: '/activity',
    branchIndex: 3,
  ),
  _CollectNavDestination(
...
